# eafpy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
doc/: 05_06_23.md  conf.py  eafpy.rst  index.rst  modules.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_static/css/: custom.css
doc/api/: eafpy.colour.rst  eafpy.eaf.rst  eafpy.plot.rst  eafpy.rst  index.rst
doc/dev/: 05_06_23.md  06_06_23.md  07_06_2023.md  08_06_23.md  11_06_23.md  12_06_23.md  13_06_23.md  14_06_23.md  15_06_23.md  16_06_23.md  19_06_23.md  20_06_23.md  21_06_23.md  22_06_23.md  25_06_23.md  TODO.md
doc/examples/: eaf_plot.md  eaf_plot_prototype.md  heatmap_prototype.md  index.rst  plot_datasets_examples.md  style_plots.md  test_nondom.py
doc/notebooks/: plot_datasets.ipynb  plotly_example.ipynb
src/eafpy/: __init__.py  _utils.py  build_c_eaf.py  colour.py  common.h  conftest.py  eaf.py  eafpy.py  gcc_attribs.h  io.c  io.h  io_priv.h  main.c  plot.py
src/eafpy/libeaf/: a.out  build_libeaf.py  cffi_ext.py  cffi_py_wrapper.py  eaf.c  eaf.h  eaf3d.c  epsilon.h  ex_cffi.c  hv.c  hv.h  igd.h  io.c  io.h  io.h.gch  libeaf.c  libeaf_wrapper.py  main.c  main.cpp  nondominated.h  printOut  read_data
tests/: t_eaf.py  test_eaf.py
tests/test_data/: diff_t.py  read_datasets.npy
tests/test_data/eaf3d_platform_problem/: linux_sphere_3d_eaf.txt  windows_minus_linux.txt  windows_sphere_3d_eaf.txt
tests/test_data/expected_output/: input1_hv.npy  (+10 more)
tests/test_eaf3d_OS/: Linux_uniform_eaf3d.npy  Windows_uniform_eaf3d.npy  compare_eaf3d.py  get_eaf3d.py  get_first_percentile.py
(+10 files in other folders)
